# OAP

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  README.md  bench_output.txt  main.py  plot.py  pyproject.toml  reference.py  requirements.txt  results.txt  run.py  run_single_instance.py  src.py  test.py  test_huge.py  test_instance.py
.claude/context/plans/: 2026-05-04-cgsp-mw-fix-and-ddma-plan.md
.claude/context/reviews/: 2026-05-04-cgsp-paper-dissonance.md
.github/workflows/: ci.yml
analysis/: benders_analysis.py  check_ip_modes.py  polihedral.py  run_batch.py  run_batch_analysis.py  umap_benders_analysis.py
docs/: architecture.md  research_plan.md  technical_debt.md
experiments/: BENCHMARK_COMPACT_VS_BENDERS.md  benchmark_benders_general.py  benchmark_benders_semiplane.py  benchmark_benders_variants.py  benchmark_compact_vs_benders.py  check_lp_combinations.py  facet_violation_check.py  solveLP.py
experiments/configs/: general_all7_n10_n15.json  general_all7_n20.json  general_ddma_only_n20.json  t3_dfj_no_semiplane.json  t3_dfj_semiplane.json  t3_scf_no_semiplane.json  t3_scf_semiplane.json
models/: OAPBaseModel.py  OAPBendersModel.py  OAPCompactModel.py  OAPInverseBendersModel.py  __init__.py  benders.py  cplex.py  gurobi.py  typing_oap.py
models/benders/: __init__.py  farkas.py  master.py  optimize.py  pi.py  utils.py
models/mixin/: benders_analysis_mixin.py  benders_cgsp_mixin.py  benders_ddma_mixin.py  benders_farkas_mixin.py  benders_master_mixin.py  benders_maxflow_mixin.py  benders_mw_mixin.py  benders_optimize_mixin.py  benders_pi_mixin.py  inv_benders_analysis_mixin.py  inv_benders_master_mixin.py  inv_benders_optimize_mixin.py  inv_benders_sub_mixin.py  oap_builder_mixin.py  oap_stats_mixin.py
polihedral/: function.py
test/: TablaResultadosA4.tsv  benders_postmortem_analysis.py  resultados_esperados.csv  resultados_lp.csv  test.py  test_benders.py  test_benders_semiplane.py  test_bendersv2.py  test_cgsp_fixes.py  test_cgsp_validity.py  test_compact_maximize.py  test_compact_minimize.py  test_cross_model_equivalence.py  test_ddma.py  test_deepest_cuts.py  test_geometry.py  test_huge.py  test_instance.py  test_inverse_benders_vs_compact.py
test/data/: TablaResultadosA4.tsv
utils/: analyze_benders.py  benders_log.py  constraints.py  farkas_viz.py  geometry.py  geometry_classifier.py  model_stats.py  polygon_enumeration.py  utils.py  visualization.py
