[project]
name = "src"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "argparse>=1.4.0",
    "cplex>=22.1.2.0",
    "docplex>=2.31.254",
    "gurobipy>=13.0.0",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pandas-stubs>=3.0.0.260204",
    "plotly>=6.5.2",
    "pycddlib<3.0.0",
    "pytest>=9.0.2",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]
